Creative Styling of :Visited Links

--- a/views/journal/_directory.yaml
+++ b/views/journal/_directory.yaml
@@ -1,6 +1,17 @@
 --- 
 - 
   ? !ruby/symbol date
+  : 2013-10-18
+  ? !ruby/symbol excerpt
+  : "Excerpt derka :vistited :visited."
+  ? !ruby/symbol slug
+  : /journal/Creative-Styling-of-Visited-Links
+  ? !ruby/symbol tags
+  : css
+  ? !ruby/symbol title
+  : "Creative Styling of :Visited Links"
+- 
+  ? !ruby/symbol date
   : 2013-09-20
   ? !ruby/symbol excerpt
   : "Adventures in programming with Ruby and Sinatra."
