updated post excerpt

--- a/views/journal/_directory.yaml
+++ b/views/journal/_directory.yaml
@@ -3,13 +3,13 @@
   ? !ruby/symbol date
   : 2013-11-20
   ? !ruby/symbol excerpt
-  : "Def Jam Recordings and recreating Verne Ho’s sketch notes on the web."
+  : "Thoughts on inspiring people and recreating sketch notes on the web."
   ? !ruby/symbol slug
   : /journal/Invest-In-People
   ? !ruby/symbol tags
   : general
   ? !ruby/symbol title
-  : "Invest In People"
+  : "Invest in People"
 - 
   ? !ruby/symbol date
   : 2013-10-18
