--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-react": "^4.2.3",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-postcss": "^6.1.0",
     "gulp-size": "^2.1.0",
     "normalize.css": "^4.1.1",
