--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Personal website of Brad Cerasani",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp build"
   },
   "repository": "bradcerasani/bradcerasani.me",
   "author": {
