--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "babel-plugin-styled-components": "^1.10.6",
+    "fs-extra": "^8.1.0",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-google-analytics": "^2.1.29",
@@ -33,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-imgix": "^9.0.1",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
