--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
+    "@vimeo/player": "^2.10.0",
     "babel-plugin-styled-components": "^1.10.6",
     "fs-extra": "^8.1.0",
     "gatsby": "^2.18.12",
