--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-mdx": "^1.0.67",
     "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-remove-trailing-slashes": "^2.1.21",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-remark-copy-linked-files": "^2.1.31",
