--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "6.0.0-beta.2",
+    "react-helmet": "^6.0.0-beta.2",
     "react-imgix": "^9.0.1",
     "styled-components": "^4.4.1"
   },
