--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-remark-smartypants": "^2.1.17",
     "gatsby-remark-widows": "^1.0.0",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-instagram": "^0.7.0",
     "gatsby-transformer-remark": "^2.6.39",
     "gatsby-transformer-sharp": "^2.3.7",
     "prismjs": "^1.17.1",
