--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "The personal site of Brad Cerasani",
   "version": "5.0.0",
   "author": "Brad Cerasani <bradcerasani@gmail.com>",
+  "engines": {
+    "node": "12.x"
+  },
   "bugs": {
     "url": "https://github.com/bradcerasani/bradcerasani.me/issues"
   },
@@ -31,14 +34,16 @@
     "gatsby-remark-smartypants": "^2.1.17",
     "gatsby-remark-widows": "^1.0.0",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-source-instagram": "^0.7.0",
+    "gatsby-source-instagram": "^0.9.0",
     "gatsby-transformer-remark": "^2.6.39",
     "gatsby-transformer-sharp": "^2.3.7",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
+    "react-compare-slider": "^1.0.3",
     "react-dom": "^16.12.0",
     "react-draggable": "^4.2.0",
     "react-helmet": "^6.0.0-beta.2",
+    "react-image-comparison-slider": "^1.8.4",
     "react-imgix": "^9.0.1",
     "styled-components": "^4.4.1"
   },
