--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.19.1",
     "prettier-stylelint": "^0.4.2",
     "stylelint": "^13.0.0",
