--- a/package.json
+++ b/package.json
@@ -5,56 +5,56 @@
   "version": "5.0.0",
   "author": "Brad Cerasani <bradcerasani@gmail.com>",
   "engines": {
-    "node": "12.x"
+    "node": ">=14.x"
   },
   "bugs": {
     "url": "https://github.com/bradcerasani/bradcerasani.me/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.5",
-    "@mdx-js/react": "^1.5.5",
-    "@vimeo/player": "^2.10.0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "fs-extra": "^8.1.0",
-    "gatsby": "^2.18.12",
-    "gatsby-image": "^2.2.34",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@vimeo/player": "^2.15.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "fs-extra": "^9.0.1",
+    "gatsby": "^2.30.3",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-google-analytics": "^2.1.29",
-    "gatsby-plugin-manifest": "^2.2.31",
-    "gatsby-plugin-mdx": "^1.0.67",
-    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-google-analytics": "^2.9.0",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-remove-trailing-slashes": "^2.1.21",
-    "gatsby-plugin-sharp": "^2.3.5",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-remark-copy-linked-files": "^2.1.31",
-    "gatsby-remark-images": "^3.1.35",
-    "gatsby-remark-prismjs": "^3.3.25",
-    "gatsby-remark-responsive-iframe": "^2.2.28",
-    "gatsby-remark-smartypants": "^2.1.17",
+    "gatsby-plugin-remove-trailing-slashes": "^2.8.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-remark-copy-linked-files": "^2.8.0",
+    "gatsby-remark-images": "^3.9.0",
+    "gatsby-remark-prismjs": "^3.11.0",
+    "gatsby-remark-responsive-iframe": "^2.9.0",
+    "gatsby-remark-smartypants": "^2.8.0",
     "gatsby-remark-widows": "^1.0.0",
-    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-filesystem": "^2.9.1",
     "gatsby-source-instagram": "^0.9.0",
-    "gatsby-transformer-remark": "^2.6.39",
-    "gatsby-transformer-sharp": "^2.3.7",
-    "prismjs": "^1.17.1",
-    "react": "^16.12.0",
-    "react-compare-slider": "^1.0.3",
-    "react-dom": "^16.12.0",
-    "react-draggable": "^4.2.0",
-    "react-helmet": "^6.0.0-beta.2",
-    "react-imgix": "^9.0.1",
-    "styled-components": "^4.4.1"
+    "gatsby-transformer-remark": "^2.14.0",
+    "gatsby-transformer-sharp": "^2.10.1",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-compare-slider": "^2.0.2",
+    "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
+    "react-helmet": "^6.1.0",
+    "react-imgix": "^9.0.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "prettier-stylelint": "^0.4.2",
-    "stylelint": "^13.0.0",
+    "stylelint": "^13.8.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-order": "^4.0.0",
-    "stylelint-processor-styled-components": "^1.9.0"
+    "stylelint-order": "^4.1.0",
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "license": "MIT",
   "main": "n/a",
