--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-source-instagram": "^0.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "gatsby-transformer-sharp": "^2.10.1",
+    "lazysizes": "^5.3.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-compare-slider": "^2.0.2",
