--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "gatsby-plugin-react-axe": "^0.5.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^2.2.1",
     "prettier-stylelint": "^0.4.2",
