--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
     {
       "source": "/projects",
       "destination": "/"
+    },
+    {
+      "source": "/play",
+      "destination": "https://www.youtube.com/embed/o-kOE0Uev74?autoplay=1"
     }
   ]
 }
