--- a/package.json
+++ b/package.json
@@ -1,74 +1,51 @@
 {
   "name": "bradcerasani.me",
   "private": true,
-  "description": "The personal site of Brad Cerasani",
-  "version": "5.0.0",
-  "author": "Brad Cerasani <bradcerasani@gmail.com>",
-  "engines": {
-    "node": "14.x"
-  },
-  "bugs": {
-    "url": "https://github.com/bradcerasani/bradcerasani.me/issues"
-  },
-  "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@vimeo/player": "^2.15.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "fs-extra": "^9.0.1",
-    "gatsby": "^2.30.3",
-    "gatsby-image": "^2.9.0",
-    "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-google-analytics": "^2.9.0",
-    "gatsby-plugin-manifest": "^2.10.0",
-    "gatsby-plugin-mdx": "^1.8.0",
-    "gatsby-plugin-react-helmet": "^3.8.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-remove-trailing-slashes": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.12.2",
-    "gatsby-plugin-styled-components": "^3.8.0",
-    "gatsby-remark-copy-linked-files": "^2.8.0",
-    "gatsby-remark-images": "^3.9.0",
-    "gatsby-remark-prismjs": "^3.11.0",
-    "gatsby-remark-responsive-iframe": "^2.9.0",
-    "gatsby-remark-smartypants": "^2.8.0",
-    "gatsby-remark-widows": "^1.0.0",
-    "gatsby-source-filesystem": "^2.9.1",
-    "gatsby-transformer-remark": "^2.14.0",
-    "gatsby-transformer-sharp": "^2.10.1",
-    "lazysizes": "^5.3.0",
-    "prismjs": "^1.23.0",
-    "react": "^17.0.1",
-    "react-compare-slider": "^2.0.2",
-    "react-dom": "^17.0.1",
-    "react-draggable": "^4.4.3",
-    "react-helmet": "^6.1.0",
-    "react-imgix": "^9.0.3",
-    "styled-components": "^5.2.1"
-  },
-  "devDependencies": {
-    "gatsby-plugin-react-axe": "^0.5.0",
-    "gatsby-plugin-root-import": "^2.0.5",
-    "prettier": "^2.2.1",
-    "prettier-stylelint": "^0.4.2",
-    "stylelint": "^13.8.0",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-order": "^4.1.0",
-    "stylelint-processor-styled-components": "^1.10.0"
-  },
+  "description": "The personal website of Brad Cerasani",
+  "version": "5.1.0",
+  "author:": "Brad Cerasani <bradcerasani@gmail.com>",
   "license": "MIT",
-  "main": "n/a",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bradcerasani/bradcerasani.me.git"
   },
+  "bugs": {
+    "url": "https://github.com/bradcerasani/bradcerasani.me/issues"
+  },
+  "engines": {
+    "node": ">=14.x"
+  },
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop -H 0.0.0.0",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.8",
+    "@ngsctt/remark-smartypants": "^0.2.0",
+    "@svgr/webpack": "^6.2.0",
+    "@vimeo/player": "^2.16.2",
+    "fast-glob": "^3.2.11",
+    "fs-extra": "^10.0.0",
+    "globby": "^12.2.0",
+    "gray-matter": "^4.0.3",
+    "lazysizes": "^5.3.2",
+    "next": "12.0.8",
+    "next-mdx-remote": "^3.0.8",
+    "react": "17.0.2",
+    "react-compare-slider": "^2.2.0",
+    "react-dom": "17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-imgix": "^9.0.3",
+    "remark-prism": "^1.3.6",
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "prettier": "^2.5.1"
   }
 }
