--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fetch:instagram": "node ./scripts/fetch-instagram.js"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -43,6 +44,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "axios": "^0.25.0",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
