--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "url": "https://github.com/bradcerasani/bradcerasani.me/issues"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": "14.x"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fetch:instagram": "node ./scripts/fetch-instagram.js"
+    "deploy": "node ./src/utils/copy-media.mjs && vercel",
+    "fetch:instagram": "node ./src/utils/instagram.js"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -39,7 +40,7 @@
     "react-compare-slider": "^2.2.0",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
-    "react-imgix": "^9.0.3",
+    "react-imgix": "9.0.3",
     "remark-prism": "^1.3.6",
     "styled-components": "^5.3.3"
   },
