Test prebuild command for media cp

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node ./src/utils/copy-media.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
