--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "next start",
     "lint": "next lint",
     "deploy": "node ./src/utils/copy-media.mjs && vercel",
-    "fetch:instagram": "node ./src/utils/instagram.js"
+    "fetch:instagram": "node ./src/utils/instagram.mjs"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -46,8 +46,6 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "axios": "^0.25.0",
-    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "prettier": "^2.5.1"
