--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "bradcerasani.me",
   "private": true,
-  "description": "The personal website of Brad Cerasani",
+  "description": "The personal site of Brad Cerasani",
   "version": "5.1.0",
   "author:": "Brad Cerasani <bradcerasani@gmail.com>",
-  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bradcerasani/bradcerasani.me.git"
