--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "prebuild": "node ./src/utils/copy-media.mjs",
     "build": "next build",
     "start": "next start",
