--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/mdx": "^12.0.8",
     "@ngsctt/remark-smartypants": "^0.2.0",
     "@svgr/webpack": "^6.2.0",
+    "@vercel/analytics": "^0.1.9",
     "@vimeo/player": "^2.16.2",
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.0.0",
@@ -36,6 +37,7 @@
     "lazysizes": "^5.3.2",
     "next": "^12.1.0",
     "next-mdx-remote": "^3.0.8",
+    "node-fetch": "^3.2.10",
     "react": "17.0.2",
     "react-compare-slider": "^2.2.0",
     "react-dom": "17.0.2",
