--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
+    "@astrojs/vercel": "^7.5.0",
     "@vimeo/player": "^2.22.0",
     "astro": "^4.5.9",
     "react": "^18.2.0",
