--- a/biome.json
+++ b/biome.json
@@ -1,19 +1,20 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.6.2/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true
-    }
-  },
-  "javascript": {
-    "formatter": {
-      "semi": false,
-      "singleQuote": true,
-      "jsxQuoteStyle": "single"
-    }
-  }
+	"$schema": "https://biomejs.dev/schemas/1.6.2/schema.json",
+	"organizeImports": {
+		"enabled": true
+	},
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"recommended": true
+		}
+	},
+	"javascript": {
+		"formatter": {
+			"indentStyle": "space",
+			"jsxQuoteStyle": "double",
+			"lineWidth": 100,
+			"quoteStyle": "single"
+		}
+	}
 }
