--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "astro": "^4.5.9",
     "react": "^18.2.0",
     "react-compare-slider": "^3.0.1",
-    "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.2",
