--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-order": "^6.0.4",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
